--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -1,3 +1,35 @@
+:root {
+  --title-header-height: 100px;
+}
+
+.scroll-snapper {
+  scroll-snap-type: y mandatory;
+  scroll-padding-top: calc(var(--title-header-height) + 10px);
+  height: 100vh;
+  overflow-y: scroll;
+}
+
+.title {
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  background: #fff;
+  height: var(--title-header-height);
+  padding-top: 10px;
+  width: 100%;
+  border-bottom: 1px solid lightgray;
+  margin-bottom: 20px;
+  box-shadow: 0 1px 10px rgba(0,0,0,0.4);
+  z-index: 2;
+}
+
+@supports (-webkit-backdrop-filter: blur(0)) {
+  .title {
+    background: rgba(255, 255, 255, 0.89);
+    -webkit-backdrop-filter: blur(10px);
+  }
+}
+
 .gallery-grid {
   display: grid;
   width: 100%;
@@ -18,19 +50,26 @@ img {
   grid-row: span 3;
 }
 
-.image-7 {
+.image-7,
+.image-13 {
   grid-column: span 2;
 }
 
 .image-8,
 .image-9,
-.image-10 {
+.image-10,
+.image-13 {
   grid-row: span 2;
+}
+
+.image-14 {
+  grid-column: span 3;
 }
 
 .image-container {
   cursor: pointer;
   overflow: hidden;
+  scroll-snap-align: start;
 }
 
 .image-container img {
